Changes in quota-tools from 3.08 to 3.09
* fixed minor bug in documentation (Jan Kara, Lucas Brasilino)
* repquota(8) handles multiple entries in /etc/passwd better (Jan Kara)
* made tools not to touch mountpoints mounted without quota options (Jan Kara)
* added option for ignoring autofs mountpoints to quota(1), quot(8) and repquota(8) (Jan Kara, Paul Szabo)

Changes in quota-tools from 3.07 to 3.08
* Fixed infinite loop in quotacheck under RH7.1 (?)
* Made quota tools aware of /etc/services (H. J. Lu)
* Updated edquota(8) and setquota(8) to allow setting of individual grace time (Jan Kara)
* Fixed bug in convertquota(8) when quota was turned on during converting (Jan Kara)
* Add support for XFS filesystems without root special casing (Christoph Hellwig)
* XFS documentation updates (Nathan Scott)

Changes in quota-tools from 3.06 to 3.07
* Added creation of bin and sbin dir during make install; removed hardcoded 
  /sbin directory for some utilities. (Jan Kara)
* Add support for 32 bit uid's and gid's when using EXT2_DIRECT. (Michael Meskes)
* updated manpage of rpc.rquotad (Jan Kara)
* setquota is disabled by default in rpc.rquotad (Jan Kara)
* setquota using RPC is disabled by default in configure (Jan Kara)
* rised maximal number of mountpoint to 256 (Jan Kara)
* small fix in configure (Nathan Scott)
* small fix in quotacheck(8) docs (Jan Kara)
* fixed quotacheck(8) to continue when old quota files were not found (Jan Kara)
* quota(1) now doesn't report failure to connect to rpc.rquotad server when -Q specified (Jan Kara)
* add quota(1) option -l (report only local filesystems) (Jan Kara)
* warnquota(8) now also mails specified member of the group about violation of the group quotas
  when -g option is specified (Jan Kara)
* added options by which user can specify whether repquota(8) should translate names in
  big chunks by scanning all users or individually. Added automagic detection using nsswitch.conf